feat: add daily itinerary images (Day 1 - Day 9)

--- a/index.html
+++ b/index.html
@@ -318,6 +318,26 @@
       margin-bottom: 4px;
     }
 
+    .day-image {
+      width: 100%;
+      height: 130px;
+      border-radius: 10px;
+      overflow: hidden;
+      margin: 8px 0;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
+    }
+
+    .day-image img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transition: transform 0.4s ease;
+    }
+
+    .day-card:hover .day-image img {
+      transform: scale(1.05);
+    }
+
     .day-hotel {
       font-size: 11px;
       color: var(--teal);
@@ -1890,6 +1910,9 @@
           <span class="day-date">5月16日（週五）</span>
         </div>
         <div class="day-theme">抵達成都 · 市區初體驗 🏙️</div>
+        <div class="day-image">
+          <img src="images/Day1.png" alt="Day 1" loading="lazy">
+        </div>
         <div class="day-hotel">🏨 春熙路國際金融中心亞朵酒店</div>
         <div class="attraction-tags">
           <span class="tag">春熙路</span>
@@ -1915,6 +1938,9 @@
           <span class="day-date">5月17日（週六）</span>
         </div>
         <div class="day-theme">黃龍溪古鎮一日遊 🏮</div>
+        <div class="day-image">
+          <img src="images/Day2.png" alt="Day 2" loading="lazy">
+        </div>
         <div class="day-hotel">🏨 春熙路國際金融中心亞朵酒店（同上）</div>
         <div class="attraction-tags">
           <span class="tag">黃龍溪古鎮</span>
@@ -1937,6 +1963,9 @@
           <span class="day-date">5月18日（週日）</span>
         </div>
         <div class="day-theme">高鐵直奔九寨 · 藏族風情 🏔️</div>
+        <div class="day-image">
+          <img src="images/Day3.png" alt="Day 3" loading="lazy">
+        </div>
         <div class="day-hotel">🏨 四季雲隱·五恆全氧民宿（彭豐村）</div>
         <div class="attraction-tags">
           <span class="tag">川青高鐵</span>
@@ -1960,6 +1989,9 @@
           <span class="day-date">5月19日（週一）</span>
         </div>
         <div class="day-theme">一進九寨溝 · 童話世界 💎</div>
+        <div class="day-image">
+          <img src="images/Day4.png" alt="Day 4" loading="lazy">
+        </div>
         <div class="day-hotel">🏨 四季雲隱·五恆全氧民宿（同上）</div>
         <div class="attraction-tags">
           <span class="tag">五花海</span>
@@ -1983,6 +2015,9 @@
           <span class="day-date">5月20日（週二）</span>
         </div>
         <div class="day-theme">二進九寨溝 · 移宿川主寺 🏕️</div>
+        <div class="day-image">
+          <img src="images/Day5.png" alt="Day 5" loading="lazy">
+        </div>
         <div class="day-hotel">🏨 雲起·迦境 藏式奢享民宿</div>
         <div class="attraction-tags">
           <span class="tag">九寨溝補考</span>
@@ -2005,6 +2040,9 @@
           <span class="day-date">5月21日（週三）</span>
         </div>
         <div class="day-theme">黃龍鈣化池 · 返回成都 🐉</div>
+        <div class="day-image">
+          <img src="images/Day6.png" alt="Day 6" loading="lazy">
+        </div>
         <div class="day-hotel">🏨 凱特麗亞創意主題飯店公寓</div>
         <div class="attraction-tags">
           <span class="tag">黃龍景區</span>
@@ -2028,6 +2066,9 @@
           <span class="day-date">5月22日（週四）</span>
         </div>
         <div class="day-theme">熊貓谷 · 都江堰水利奇蹟 🐼</div>
+        <div class="day-image">
+          <img src="images/Day7.png" alt="Day 7" loading="lazy">
+        </div>
         <div class="day-hotel">🏨 凱特麗亞創意主題飯店公寓（同上）</div>
         <div class="attraction-tags">
           <span class="tag">熊貓谷</span>
@@ -2050,6 +2091,9 @@
           <span class="day-date">5月23日（週五）</span>
         </div>
         <div class="day-theme">探秘三星堆 · 移動至機場 🏛️</div>
+        <div class="day-image">
+          <img src="images/Day8.png" alt="Day 8" loading="lazy">
+        </div>
         <div class="day-hotel">🏨 天府空港悅享飯店（天府機場旁）</div>
         <div class="attraction-tags">
           <span class="tag">三星堆博物館</span>
@@ -2072,6 +2116,9 @@
           <span class="day-date">5月24日（週六）</span>
         </div>
         <div class="day-theme">告別成都 · 返回溫暖的家 ✈️</div>
+        <div class="day-image">
+          <img src="images/Day9.png" alt="Day 9" loading="lazy">
+        </div>
         <div class="day-hotel">
           ✈️ CX917 08:10 → 香港 → CX458 → 高雄 18:05
         </div>
