style: add day images to daily itinerary inner pages (day1.html - day9.html)

--- a/day1.html
+++ b/day1.html
@@ -78,7 +78,7 @@
         .banner {
             position: relative;
             height: 180px;
-            background: url('https://images.unsplash.com/photo-1600111893479-a4c9e2b3d6d0?w=800&q=80') center/cover;
+            background: url('images/Day1.png') center/cover;
             display: flex;
             align-items: flex-end;
             padding: 16px;
