--- a/day2.html
+++ b/day2.html
@@ -75,7 +75,7 @@
         .banner {
             position: relative;
             height: 180px;
-            background: url('https://images.unsplash.com/photo-1533669955142-6a73332af4db?w=800&q=80') center/cover;
+            background: url('images/Day2.png') center/cover;
             display: flex;
             align-items: flex-end;
             padding: 16px;
