--- a/day6.html
+++ b/day6.html
@@ -75,7 +75,7 @@
         .banner {
             position: relative;
             height: 180px;
-            background: url('https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?w=800&q=80') center/cover;
+            background: url('images/Day6.png') center/cover;
             display: flex;
             align-items: flex-end;
             padding: 16px;
