--- a/day8.html
+++ b/day8.html
@@ -75,7 +75,7 @@
         .banner {
             position: relative;
             height: 180px;
-            background: #065F46;
+            background: url('images/Day8.png') center/cover;
             display: flex;
             align-items: flex-end;
             padding: 16px;
