--- a/day3.html
+++ b/day3.html
@@ -75,7 +75,7 @@
         .banner {
             position: relative;
             height: 180px;
-            background: url('https://images.unsplash.com/photo-1516483638261-f4dbaf036963?w=800&q=80') center/cover;
+            background: url('images/Day3.png') center/cover;
             display: flex;
             align-items: flex-end;
             padding: 16px;
