--- a/day4.html
+++ b/day4.html
@@ -75,7 +75,7 @@
         .banner {
             position: relative;
             height: 180px;
-            background: url('https://images.unsplash.com/photo-1513415756790-2ac1db1297d0?w=800&q=80') center/cover;
+            background: url('images/Day4.png') center/cover;
             display: flex;
             align-items: flex-end;
             padding: 16px;
