--- a/day7.html
+++ b/day7.html
@@ -75,7 +75,7 @@
         .banner {
             position: relative;
             height: 180px;
-            background: url('https://images.unsplash.com/photo-1564349683136-77e08dba1ef7?w=800&q=80') center/cover;
+            background: url('images/Day7.png') center/cover;
             display: flex;
             align-items: flex-end;
             padding: 16px;
