--- a/day9.html
+++ b/day9.html
@@ -72,7 +72,7 @@
         .banner {
             position: relative;
             height: 180px;
-            background: linear-gradient(135deg, #1E3A5F, #3B82F6);
+            background: url('images/Day9.png') center/cover;
             display: flex;
             align-items: flex-end;
             padding: 16px;
