style: 更新日行程圖片的顯示方式

--- a/day2.html
+++ b/day2.html
@@ -332,6 +332,11 @@
         </div>
     </div>
 
+    <!-- 完整圖片展示區塊 -->
+    <div style="padding: 16px 16px 0;">
+        <img src="images/Day2.png" alt="Day 2" style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
+    </div>
+
     <div class="sec-head">
         <div class="dot" style="background:var(--c)"></div>
         <h2>📍 今日行程</h2>
@@ -408,6 +413,11 @@
         </div>
     </div>
 
+    <!-- 完整圖片展示區塊 -->
+    <div style="padding: 16px 16px 0;">
+        <img src="images/Day2.png" alt="Day 2" style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
+    </div>
+
     <div class="sec-head">
         <div class="dot" style="background:#0D9488"></div>
         <h2>🏨 今晚住宿</h2>
@@ -418,6 +428,11 @@
             <div class="name">春熙路國際金融中心亞朵酒店</div>
             <div class="desc">📍 同Day 1（第2晚）<br>💡 明天退房前往九寨溝，記得整理行李！</div>
         </div>
+    </div>
+
+    <!-- 完整圖片展示區塊 -->
+    <div style="padding: 16px 16px 0;">
+        <img src="images/Day2.png" alt="Day 2" style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
     </div>
 
     <div class="sec-head">
