--- a/day4.html
+++ b/day4.html
@@ -483,6 +483,11 @@
         </div>
     </div>
 
+    <!-- 完整圖片展示區塊 -->
+    <div style="padding: 16px 16px 0;">
+        <img src="images/Day4.png" alt="Day 4" style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
+    </div>
+
     <div class="sec-head">
         <div class="dot" style="background:#0D9488"></div>
         <h2>🏨 今晚住宿</h2>
@@ -493,6 +498,11 @@
             <div class="name">四季雲隱·五恆全氧民宿</div>
             <div class="desc">📍 同Day 3（第2晚）<br>💡 早點休息，明天二進九寨溝繼續探索！</div>
         </div>
+    </div>
+
+    <!-- 完整圖片展示區塊 -->
+    <div style="padding: 16px 16px 0;">
+        <img src="images/Day4.png" alt="Day 4" style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
     </div>
 
     <div class="sec-head">
