--- a/day6.html
+++ b/day6.html
@@ -358,6 +358,11 @@
         </div>
     </div>
 
+    <!-- 完整圖片展示區塊 -->
+    <div style="padding: 16px 16px 0;">
+        <img src="images/Day6.png" alt="Day 6" style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
+    </div>
+
     <div class="sec-head">
         <div class="dot" style="background:#10B981"></div>
         <h2>🎯 遊覽策略</h2>
@@ -470,6 +475,11 @@
         </div>
     </div>
 
+    <!-- 完整圖片展示區塊 -->
+    <div style="padding: 16px 16px 0;">
+        <img src="images/Day6.png" alt="Day 6" style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
+    </div>
+
     <div class="sec-head">
         <div class="dot" style="background:#0D9488"></div>
         <h2>🏨 今晚住宿</h2>
@@ -480,6 +490,11 @@
             <div class="name">凱特麗亞創意主題飯店公寓（春熙太古里店）</div>
             <div class="desc">📍 回到春熙太古里商圈<br>🛏️ 第 1 晚（共住 2 晚）<br>💡 機能便利，吃喝玩樂一步到位</div>
         </div>
+    </div>
+
+    <!-- 完整圖片展示區塊 -->
+    <div style="padding: 16px 16px 0;">
+        <img src="images/Day6.png" alt="Day 6" style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
     </div>
 
     <div class="sec-head">
