--- a/day7.html
+++ b/day7.html
@@ -332,6 +332,11 @@
         </div>
     </div>
 
+    <!-- 完整圖片展示區塊 -->
+    <div style="padding: 16px 16px 0;">
+        <img src="images/Day7.png" alt="Day 7" style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
+    </div>
+
     <div class="sec-head">
         <div class="dot" style="background:var(--c)"></div>
         <h2>📍 今日行程</h2>
@@ -409,6 +414,11 @@
         </div>
     </div>
 
+    <!-- 完整圖片展示區塊 -->
+    <div style="padding: 16px 16px 0;">
+        <img src="images/Day7.png" alt="Day 7" style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
+    </div>
+
     <div class="sec-head">
         <div class="dot" style="background:#0D9488"></div>
         <h2>🏨 今晚住宿</h2>
@@ -419,6 +429,11 @@
             <div class="name">凱特麗亞創意主題飯店公寓（春熙太古里店）</div>
             <div class="desc">📍 同Day 6（第2晚）<br>💡 明天去三星堆博物館！記得提前買票。</div>
         </div>
+    </div>
+
+    <!-- 完整圖片展示區塊 -->
+    <div style="padding: 16px 16px 0;">
+        <img src="images/Day7.png" alt="Day 7" style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
     </div>
 
     <div class="sec-head">
