--- a/day9.html
+++ b/day9.html
@@ -318,6 +318,11 @@
         </div>
     </div>
 
+    <!-- 完整圖片展示區塊 -->
+    <div style="padding: 16px 16px 0;">
+        <img src="images/Day9.png" alt="Day 9" style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
+    </div>
+
     <div class="sec-head">
         <div class="dot" style="background:var(--c)"></div>
         <h2>📍 今日行程</h2>
@@ -400,6 +405,11 @@
                 <div class="tl-tags"><span class="tl-tag">🏠 到家了</span><span class="tl-tag">🎉 旅途完美</span></div>
             </div>
         </div>
+    </div>
+
+    <!-- 完整圖片展示區塊 -->
+    <div style="padding: 16px 16px 0;">
+        <img src="images/Day9.png" alt="Day 9" style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
     </div>
 
     <div class="sec-head">
