--- a/day1.html
+++ b/day1.html
@@ -335,6 +335,12 @@
         </div>
     </div>
 
+    
+    <!-- 完整圖片展示區塊 -->
+    <div style="padding: 16px 16px 0;">
+        <img src="images/Day1.png" alt="Day 1" style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
+    </div>
+
     <!-- 行程時間軸 -->
     <div class="sec-head">
         <div class="dot" style="background:var(--amber)"></div>
