--- a/day3.html
+++ b/day3.html
@@ -332,6 +332,11 @@
         </div>
     </div>
 
+    <!-- 完整圖片展示區塊 -->
+    <div style="padding: 16px 16px 0;">
+        <img src="images/Day3.png" alt="Day 3" style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
+    </div>
+
     <div class="sec-head">
         <div class="dot" style="background:var(--c)"></div>
         <h2>📍 今日行程</h2>
@@ -420,6 +425,11 @@
         </div>
     </div>
 
+    <!-- 完整圖片展示區塊 -->
+    <div style="padding: 16px 16px 0;">
+        <img src="images/Day3.png" alt="Day 3" style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
+    </div>
+
     <div class="sec-head">
         <div class="dot" style="background:#0D9488"></div>
         <h2>🏨 今晚住宿</h2>
@@ -430,6 +440,11 @@
             <div class="name">四季雲隱·五恆全氧民宿（九寨溝風景區店）</div>
             <div class="desc">📍 彭豐村，近九寨溝景區入口<br>🛏️ 第 1 晚（共住 2 晚）<br>🫁 全氧概念房，高原住宿更舒適<br>💡 距離景區入口僅幾分鐘車程</div>
         </div>
+    </div>
+
+    <!-- 完整圖片展示區塊 -->
+    <div style="padding: 16px 16px 0;">
+        <img src="images/Day3.png" alt="Day 3" style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
     </div>
 
     <div class="sec-head">
