--- a/index.html
+++ b/index.html
@@ -331,6 +331,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      object-position: top;
       transition: transform 0.4s ease;
     }
 
