feat: 更新 Day2 行程細節

--- a/day2.html
+++ b/day2.html
@@ -334,7 +334,8 @@
 
     <!-- 完整圖片展示區塊 -->
     <div style="padding: 16px 16px 0;">
-        <img src="images/Day2.png" alt="Day 2" style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
+        <img src="images/Day2.png" alt="Day 2"
+            style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
     </div>
 
     <div class="sec-head">
@@ -348,10 +349,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🌅 08:30 – 09:30</div>
-                <div class="tl-title">早餐 & 出發</div>
-                <div class="tl-desc">飯店附近吃碗成都早餐（豆花、抄手、紅油水餃），然後叫滴滴或包車前往黃龍溪。車程約40-60分鐘。</div>
-                <div class="tl-tags"><span class="tl-tag">🚕 滴滴/包車</span><span class="tl-tag">~40km</span></div>
+                <div class="tl-time">🚗 09:30 – 10:30</div>
+                <div class="tl-title">從春熙路出發</div>
+                <div class="tl-desc">交通建議：推薦打車或自駕，預計耗時約 1 小時（約 50 公里）。建議 10:30 前抵達古鎮，避開後期的遊客高峰，獨享清晨的古鎮。</div>
+                <div class="tl-tags"><span class="tl-tag">🚕 滴滴/包車</span><span class="tl-tag">避開高峰</span></div>
             </div>
         </div>
 
@@ -361,12 +362,12 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🏮 10:00 – 14:00</div>
-                <div class="tl-title">黃龍溪古鎮</div>
-                <div class="tl-desc">2100年歷史的水鄉古鎮！漫步青石板老街，穿過古榕樹林蔭，沿溪邊水街拍照。中午品嚐「網紅一根麵」——超長一根拉麵表演超有趣！還有石磨豆花、焦皮肘子等古鎮特色小吃。
-                </div>
-                <div class="tl-tags"><span class="tl-tag">🏮 古街漫步</span><span class="tl-tag">🍜 一根麵</span><span
-                        class="tl-tag">📸 水街拍照</span></div>
+                <div class="tl-time">🏮 10:30 – 12:30</div>
+                <div class="tl-title">深度遊黃龍溪古鎮</div>
+                <div class="tl-desc">必打卡點：<br>• 古龍寺：兩棵 900 多年古榕樹，非常適合拍攝人文大片。<br>• 三縣衙門：全國獨一無二的「三縣共管」衙門。<br>•
+                    黃龍溪廊橋：長廊式木橋，橋上書店是拍照休憩絕佳地點。<br>• 踩水體驗：天氣溫暖可體驗當地特色「踩水」。</div>
+                <div class="tl-tags"><span class="tl-tag">🏮 古鎮漫步</span><span class="tl-tag">📸 人文大片</span><span
+                        class="tl-tag">💦 踩水</span></div>
             </div>
         </div>
 
@@ -376,10 +377,12 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚕 14:30 – 16:00</div>
-                <div class="tl-title">返回成都市區</div>
-                <div class="tl-desc">逛累了、吃飽了，搭車返回市區。回飯店稍作休息，充好電再出發享受成都夜生活。</div>
-                <div class="tl-tags"><span class="tl-tag">🚕 滴滴</span></div>
+                <div class="tl-time">🍜 12:30 – 13:30</div>
+                <div class="tl-title">午餐時光</div>
+                <div class="tl-desc">推薦「古鎮人家」、「碼頭魚莊」等。<br>必吃美食：<br>• 一根面：觀看「妖娆拉面哥」表演。<br>• 石磨豆花：配辣椒醬，嫩滑。<br>•
+                    黃辣丁：油炸小河魚，酥脆鮮香。</div>
+                <div class="tl-tags"><span class="tl-tag">🍜 一根面</span><span class="tl-tag">🐟 黃辣丁</span><span
+                        class="tl-tag">🍲 石磨豆花</span></div>
             </div>
         </div>
 
@@ -389,12 +392,37 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🍵 17:00 – 19:00</div>
-                <div class="tl-title">寬窄巷子 · 蓋碗茶</div>
-                <div class="tl-desc">成都最有名的歷史文化街區。分為「寬巷子」（懷舊閒適）、「窄巷子」（文藝精緻）、「井巷子」（時尚創意）。找家茶館坐下來，體驗成都人的慢生活——一杯蓋碗茶，一個下午。
-                </div>
-                <div class="tl-tags"><span class="tl-tag">🍵 蓋碗茶</span><span class="tl-tag">📸 歷史街區</span><span
-                        class="tl-tag">🎭 川劇</span></div>
+                <div class="tl-time">🌳 14:00 – 16:00</div>
+                <div class="tl-title">探訪周邊景點</div>
+                <div class="tl-desc">推薦選項：<br>• 歡樂田園：熱氣球、萌寵、梯田，適合拍攝色彩豐富的休閒照。<br>• 鹿溪河生態區：免費原生態，騎行野餐好去處。<br>•
+                    阿飛森林兒童遊樂園：適合親子。<br>• 觀音寺：黃瓦紅牆尼姑庵，色彩對比強烈。</div>
+                <div class="tl-tags"><span class="tl-tag">🌳 休閒拍攝</span><span class="tl-tag">🎈 歡樂田園</span></div>
+            </div>
+        </div>
+
+        <div class="tl-item">
+            <div class="tl-line">
+                <div class="tl-dot"></div>
+                <div class="tl-bar"></div>
+            </div>
+            <div class="tl-card">
+                <div class="tl-time">🍵 16:00 – 17:30</div>
+                <div class="tl-title">返回古鎮 / 準備晚餐</div>
+                <div class="tl-desc">回到古鎮稍作休息，去茶館品一杯蓋碗茶，感受慢生活。如果意猶未盡，可在古鎮特色小店逛逛。</div>
+                <div class="tl-tags"><span class="tl-tag">🍵 蓋碗茶</span><span class="tl-tag">🛍️ 特色小店</span></div>
+            </div>
+        </div>
+
+        <div class="tl-item">
+            <div class="tl-line">
+                <div class="tl-dot"></div>
+                <div class="tl-bar"></div>
+            </div>
+            <div class="tl-card">
+                <div class="tl-time">🌃 18:00 – 19:30</div>
+                <div class="tl-title">傍晚夜景與晚餐</div>
+                <div class="tl-desc">黃龍溪廊橋夜景：夜幕降臨，燈火通明倒映水中，全天最佳拍照時刻！晚餐可在古鎮解決，品嚐更多小吃。</div>
+                <div class="tl-tags"><span class="tl-tag">🌉 廊橋夜景</span><span class="tl-tag">📸 最佳拍攝</span></div>
             </div>
         </div>
 
@@ -403,19 +431,12 @@
                 <div class="tl-dot"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🌃 19:30 – 22:00</div>
-                <div class="tl-title">九眼橋 · 安順廊橋夜景 🌉</div>
-                <div class="tl-desc">成都最美夜景地標！安順廊橋在夜燈映照下倒映在錦江水面，金碧輝煌。九眼橋附近就是成都的酒吧一條街，可以找間氛圍好的小酒吧，吹著江風喝一杯，感受微醺成都的魅力。
-                </div>
-                <div class="tl-tags"><span class="tl-tag">🌉 廊橋夜景</span><span class="tl-tag">🍺 酒吧街</span><span
-                        class="tl-tag">🌃 微醺成都</span></div>
+                <div class="tl-time">🚕 20:00 後</div>
+                <div class="tl-title">準備返程</div>
+                <div class="tl-desc">從黃龍溪出發返回春熙路，建議預留充足交通時間，避免晚高峰。</div>
+                <div class="tl-tags"><span class="tl-tag">🚕 滴滴返回</span></div>
             </div>
         </div>
-    </div>
-
-    <!-- 完整圖片展示區塊 -->
-    <div style="padding: 16px 16px 0;">
-        <img src="images/Day2.png" alt="Day 2" style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
     </div>
 
     <div class="sec-head">
@@ -430,11 +451,6 @@
         </div>
     </div>
 
-    <!-- 完整圖片展示區塊 -->
-    <div style="padding: 16px 16px 0;">
-        <img src="images/Day2.png" alt="Day 2" style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
-    </div>
-
     <div class="sec-head">
         <div class="dot" style="background:#3B82F6"></div>
         <h2>🗺️ 景點地圖</h2>
@@ -446,10 +462,10 @@
         <h2>💡 今日提醒</h2>
     </div>
     <div class="tips">
-        <div class="tip"><span class="tip-ic">⚡</span><span>明天要搭高鐵前往九寨溝！今晚整理好行李，準備保暖衣物（高原溫差大）。</span></div>
-        <div class="tip"><span class="tip-ic">🎫</span><span>確認明天的高鐵票已購買（川青鐵路 成都東→黃龍九寨站），車次請提前在 12306 或 Trip.com
-                預訂。</span></div>
-        <div class="tip"><span class="tip-ic">🏮</span><span>黃龍溪古鎮免門票，但週末人多，建議早點去。</span></div>
+        <div class="tip"><span class="tip-ic">🚕</span><span>交通選擇：從春熙路出發，建議打車，預估車程約 1 小時（約50公里）。</span></div>
+        <div class="tip"><span class="tip-ic">👟</span><span>穿著建議：古鎮多為石板路，建議穿平底鞋。若想踩水，記得帶換洗衣物與拖鞋。</span></div>
+        <div class="tip"><span class="tip-ic">📸</span><span>拍照技巧：清晨和黃昏光影最好，多利用長焦拍屋頂層次，或以廊橋為前景拍夜景。</span></div>
+        <div class="tip"><span class="tip-ic">⚡</span><span>明天要搭高鐵前往九寨溝！今晚回飯店別忘了整理好行李。</span></div>
     </div>
 
     <div class="nav-btns"><a class="btn-prev" href="day1.html">← Day 1</a><a class="btn-next" href="day3.html">Day 3 ·
@@ -458,8 +474,8 @@
     <script>
         window.onload = function () {
             try {
-                var map = new AMap.Map('map', { zoom: 11, center: [104.0200, 30.5000], mapStyle: 'amap://styles/whitesmoke', resizeEnable: true });
-                [{ name: '黃龍溪古鎮', lat: 30.3184, lng: 103.9711, c: '#10B981' }, { name: '寬窄巷子', lat: 30.6726, lng: 104.0536, c: '#10B981' }, { name: '九眼橋/安順廊橋', lat: 30.6408, lng: 104.0835, c: '#10B981' }, { name: '亞朵酒店', lat: 30.6574, lng: 104.0810, c: '#0D9488' }].forEach(function (s) {
+                var map = new AMap.Map('map', { zoom: 11, center: [104.0200, 30.4000], mapStyle: 'amap://styles/whitesmoke', resizeEnable: true });
+                [{ name: '黃龍溪古鎮', lat: 30.3184, lng: 103.9711, c: '#10B981' }, { name: '歡樂田園', lat: 30.3235, lng: 103.9902, c: '#10B981' }, { name: '觀音寺', lat: 30.3150, lng: 103.9680, c: '#10B981' }, { name: '亞朵酒店', lat: 30.6574, lng: 104.0810, c: '#0D9488' }].forEach(function (s) {
                     var m = new AMap.CircleMarker({ center: [s.lng, s.lat], radius: 7, strokeColor: '#fff', strokeWeight: 2, fillColor: s.c, fillOpacity: .95, zIndex: 10, cursor: 'pointer' }); m.setMap(map);
                     m.on('click', function () { new AMap.InfoWindow({ content: '<div style="padding:6px 10px;font-size:13px;font-weight:700;">' + s.name + '</div>', offset: new AMap.Pixel(0, -10) }).open(map, m.getCenter()) });
                 });
