feat: 更新 Day1 春熙路 Citywalk 路線內容

--- a/day1.html
+++ b/day1.html
@@ -335,10 +335,11 @@
         </div>
     </div>
 
-    
+
     <!-- 完整圖片展示區塊 -->
     <div style="padding: 16px 16px 0;">
-        <img src="images/Day1.png" alt="Day 1" style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
+        <img src="images/Day1.png" alt="Day 1"
+            style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
     </div>
 
     <!-- 行程時間軸 -->
@@ -353,72 +354,71 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">✈️ 12:40</div>
-                <div class="tl-title">抵達天府國際機場</div>
-                <div class="tl-desc">國泰航空 CX986 經香港轉機抵達。取行李後前往地鐵站。</div>
-                <div class="tl-tags"><span class="tl-tag">✈️ 航班抵達</span><span class="tl-tag">T2航廈</span></div>
+                <div class="tl-time">✈️ 12:40 – 16:00</div>
+                <div class="tl-title">抵達成都與飯店 Check-in</div>
+                <div class="tl-desc">國泰航空 CX986 經香港轉機抵達天府機場。<br>搭乘地鐵 18 號線轉至春熙路站（約 1.5~2
+                    小時）。<br>入住春熙路國際金融中心亞朵酒店，放下行李準備探索春熙路商圈！</div>
+                <div class="tl-tags"><span class="tl-tag">✈️ 抵達</span><span class="tl-tag">🚇 地鐵 18 號線</span><span
+                        class="tl-tag">🏨 Check-in</span></div>
             </div>
         </div>
+
         <div class="tl-item">
             <div class="tl-line">
                 <div class="tl-dot"></div>
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚇 13:00 – 15:30</div>
-                <div class="tl-title">搭乘地鐵 18 號線至市區</div>
-                <div class="tl-desc">天府機場 → 地鐵18號線 → 轉乘至春熙路站。車程約1.5~2小時，票價約10元人民幣。</div>
-                <div class="tl-tags"><span class="tl-tag">🚇 地鐵</span><span class="tl-tag">18號線</span></div>
+                <div class="tl-time">🚶 16:30 – 18:00 (可選路線一)</div>
+                <div class="tl-title">路線一：經典潮流打卡線 📸</div>
+                <div class="tl-desc">適合初訪者。串聯春熙路核心地標：<br>• 從天府廣場出發，漫步春熙路步行街。<br>• 逛太古里，感受紅磚與玻璃幕牆的交匯。<br>• 打卡 IFS國金中心
+                    著名的「爬牆熊貓」。<br>• 逛 COSMO 體驗年輕潮流引力場。</div>
+                <div class="tl-tags"><span class="tl-tag">📸 經典打卡</span><span class="tl-tag">🐼 爬牆熊貓</span><span
+                        class="tl-tag">🛍️ 太古里</span></div>
             </div>
         </div>
+
         <div class="tl-item">
             <div class="tl-line">
                 <div class="tl-dot"></div>
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🏨 16:00</div>
-                <div class="tl-title">飯店 Check-in</div>
-                <div class="tl-desc">春熙路國際金融中心亞朵酒店。放下行李，整理一下，準備出發探索！</div>
-                <div class="tl-tags"><span class="tl-tag">🏨 入住</span><span class="tl-tag">春熙路商圈</span></div>
+                <div class="tl-time">🚶 16:30 – 18:00 (可選路線二)</div>
+                <div class="tl-title">路線二：市井煙火尋味線 🌿</div>
+                <div class="tl-desc">深入老街巷：<br>• 鏜鈀街：全球最酷街區之一，逛熊貓書店。<br>• 科甲巷：國學文脈與現代商業結合。<br>• 大慈寺與周邊市井街區：感受成都慢生活。<br>•
+                    東門市井：特色市集與小店。</div>
+                <div class="tl-tags"><span class="tl-tag">🌿 市井煙火</span><span class="tl-tag">⛩️ 大慈寺</span><span
+                        class="tl-tag">📖 鏜鈀街</span></div>
             </div>
         </div>
+
         <div class="tl-item">
             <div class="tl-line">
                 <div class="tl-dot"></div>
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">📸 16:30 – 17:30</div>
-                <div class="tl-title">IFS 國際金融中心「爬牆熊貓」</div>
-                <div class="tl-desc">成都最紅打卡地標！7樓露台有巨型攀爬大熊貓雕塑，從不同角度拍照效果超好。頂層還能俯瞰整座春熙路商圈。</div>
-                <div class="tl-tags"><span class="tl-tag">📸 必拍打卡</span><span class="tl-tag">🐼 地標</span></div>
+                <div class="tl-time">🚶 16:30 – 18:00 (可選路線三)</div>
+                <div class="tl-title">路線三：新春限定探索線 🏮</div>
+                <div class="tl-desc">結合「潮遊錦江·春熙Walk」：<br>• 從春熙廣場出發參與探索賽。<br>• 打卡錦江賓館、水井坊博物館、十二月市博物館。<br>•
+                    特色體驗：機器人大世界（機器人跳舞/咖啡）。<br>• 小程式打卡領取限量盲盒獎牌。</div>
+                <div class="tl-tags"><span class="tl-tag">🏮 新春限定</span><span class="tl-tag">🤖 機器人</span><span
+                        class="tl-tag">🏅 限量獎牌</span></div>
             </div>
         </div>
-        <div class="tl-item">
-            <div class="tl-line">
-                <div class="tl-dot"></div>
-                <div class="tl-bar"></div>
-            </div>
-            <div class="tl-card">
-                <div class="tl-time">🚶 17:30 – 19:00</div>
-                <div class="tl-title">漫步太古里</div>
-                <div class="tl-desc">成都最時尚的開放式商業街區，中西融合建築風格。旁邊就是千年古寺「大慈寺」，古今交融超有氛圍感。</div>
-                <div class="tl-tags"><span class="tl-tag">🛍️ 購物</span><span class="tl-tag">⛩️ 大慈寺</span><span
-                        class="tl-tag">📸 拍照</span></div>
-            </div>
-        </div>
+
         <div class="tl-item">
             <div class="tl-line">
                 <div class="tl-dot"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🍲 19:00 – 21:00</div>
-                <div class="tl-title">道地四川麻辣火鍋 🌶️</div>
-                <div class="tl-desc">來成都第一件事——吃火鍋！推薦「小龍坎」或「蜀大俠」。建議點鴛鴦鍋（辣鍋+清湯鍋），必點毛肚、鵝腸、黃喉。也可以試試「串串香」，一根一根串著涮，更有成都街頭感。
-                </div>
-                <div class="tl-tags"><span class="tl-tag">🌶️ 火鍋</span><span class="tl-tag">🍢 串串香</span><span
-                        class="tl-tag">🔥 必吃</span></div>
+                <div class="tl-time">🍲 18:30 – 21:00</div>
+                <div class="tl-title">道地美食與晚餐 🌶️</div>
+                <div class="tl-desc">沿著不同路線均有美食選擇：<br>• 經典路線：龍抄手、熊貓吃個飽主題餐廳。<br>•
+                    市井路線：寬窄巷子(三大炮、糖油果子)、人民公園蓋碗茶。<br>也可選「小龍坎」或「蜀大俠」吃一頓道地四川麻辣火鍋（推薦鴛鴦鍋）。</div>
+                <div class="tl-tags"><span class="tl-tag">🌶️ 麻辣火鍋</span><span class="tl-tag">🥟 龍抄手</span><span
+                        class="tl-tag">🍡 糖油果子</span></div>
             </div>
         </div>
     </div>
@@ -449,10 +449,13 @@
         <h2>💡 今日提醒</h2>
     </div>
     <div class="tips">
+        <div class="tip"><span class="tip-ic">🚶‍♂️</span><span>Citywalk 建議安排半天到一天，穿著舒適的鞋子。春熙路商圈 Wi-Fi
+                覆蓋廣泛，方便使用導航和小程式。</span></div>
+        <div class="tip"><span class="tip-ic">🚇</span><span>交通：春熙路地鐵站直達，可乘坐地鐵 2 號線或 3 號線。天府機場搭 18 號線轉乘也可抵達。</span>
+        </div>
+        <div class="tip"><span class="tip-ic">🎁</span><span>新春活動優惠：憑「數字票根」可在錦江賓館等享折扣，或在「熊貓吃個飽」等享受低至 5.6 折的優惠！</span>
+        </div>
         <div class="tip"><span class="tip-ic">📱</span><span>抵達後先買中國 SIM 卡或開通漫遊，下載支付寶/微信支付（大陸幾乎不用現金）。</span></div>
-        <div class="tip"><span class="tip-ic">🚇</span><span>地鐵18號線可直達市區，但高峰期需25分鐘一班，建議備好離線地圖。</span></div>
-        <div class="tip"><span class="tip-ic">🌶️</span><span>火鍋如果怕辣，一定要點鴛鴦鍋！「微辣」在四川已經是很辣了。</span></div>
-        <div class="tip"><span class="tip-ic">💰</span><span>建議備帶少量人民幣現金（約500元），部分地鐵售票機和小攤需要現金。</span></div>
     </div>
 
     <!-- 下一天 -->
